more sections created and scss

--- a/index.html
+++ b/index.html
@@ -71,6 +71,40 @@
           </div>
         </div>
       </section>
+      <section class="services">
+        <div class="services-content container">
+          <h2>Serviços</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. At,
+            labore? Non neque aspernatur placeat ipsa quae! Doloribus ex ut
+            officia dolorum sequi inventore expedita quo molestias laudantium.
+            Ipsam, eveniet incidunt?
+          </p>
+        </div>
+        <section class="haircuts">
+          <div class="haircut">
+            <img src="assets/images/corte1.png" alt="Corte Normal" />
+            <div class="haircut-info">
+              <strong> Corte Normal </strong>
+              <button>R$25,00</button>
+            </div>
+          </div>
+          <div class="haircut">
+            <img src="assets/images/corte2.png" alt="Corte Normal" />
+            <div class="haircut-info">
+              <strong> Barba Normal </strong>
+              <button>R$20,00</button>
+            </div>
+          </div >
+          <div class="haircut">
+            <img src="assets/images/corte3.png" alt="Corte Normal" />
+            <div class="haircut-info">
+              <strong> Corte + Barba </strong>
+              <button>R$40,00</button>
+            </div>
+          </div>
+        </section>
+      </section>
     </div>
   </body>
 </html>
